# noon

examples/: easing.rs  hello_world.rs  morph.rs  morph_text.rs  shapes.rs  temp.rs
noon/: Cargo.toml
noon/src/: component.rs  ease.rs  scene.rs
noon/src/animation/: builder.rs  path.rs
noon/src/object/: circle.rs  empty.rs  line.rs  rectangle.rs  text.rs
