[package]
name = "noon"
version = "0.1.0"
authors = ["Yongkyun Shin <yongkyuns@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.13.2"
nannou = "0.19.0"
cgmath = "0.18.0"
pennereq = "0.3.1"

[dev-dependencies]
